// TenantStatus.java
package com.gtcafe.app.enums;

public enum TenantStatus {
    INITING,
    ACTIVE,
    INACTIVE,
    TERMINATED
}
